Change files name

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <head>
             <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
             <title>To Do List 🐼</title>
-            <link rel="stylesheet" href="todolist.css">
+            <link rel="stylesheet" href="testCSS">
         </head>
         <body>
                 <div class="wrapper">
@@ -20,6 +20,6 @@
                       <ul id="toDoList"></ul>	
                     </div>
                 </div>
-            <script src="todolist.js"></script>
+            <script src="testJS"></script>
         </body>
     </html>
