--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
         </head>
         <body>
                 <div class="wrapper">
-                    <header>
-                      <h1>To Do List</h1>
+                    <header></header>
+                        
+                    <div class="main">
+                      <h1>To Do List</h1>	
                       <form id="submitTask">
                         <input type="text" name="name" placeholder="Add a new task">
                         <button type="submit" name="submit" value="submit">To Do</button>
                       </form>
-                    </header>
-                        
-                    <div class="main">	
                       <p>Your to do list :</p>
                       <ul id="toDoList"></ul>	
                     </div>
